src/test/parse-fail/empty-impl-semicolon.rs
// compile-flags: -Z parse-only

impl Foo; //~ ERROR expected one of `!`, `(`, `+`, `::`, `<`, `for`, `where`, or `{`, found `;`
